Replace deprecated method calls
* Class::newInstance -> Class::getDeclaredConstructor::newInstance
* StringUtils.* -> Strings.CS.*
* com.fasterxml.jackson.databind.jsonschema.SchemaAware -> matching based on JsonNode is* methods
* MockitoAnnotations::initMocks -> MockitoExtension
* org.apache.maven.shared.utils.io.* -> org.codehaus.plexus.util.*
* removed TestInstance.Lifecycle.PER_CLASS
* reworked: DigitsRuleTest, MinItemsMaxItemsRuleTest, MinLengthMaxLengthRuleTest, MinimumMaximumRuleTest, RequiredArrayRuleTest, PatternRuleTest